# rust-cli-mysql

./: .gitignore  Cargo.toml  README.md
src/: cmd_test.rs  config.rs  main.rs
src/config/: fixed_key.rs.sample.rs  params.rs
