[package]
name = "cli-mysql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

structconf = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
serde = { version ="1.0", features = ["derive"] }
mysql = "21.0"
tindercrypt = { version = "0.3", default-features = false }
rand = "0.8"
structopt = "0.3"
confy = "0.4"
base64 = "0.13"